syntax="proto3";
package proto;

message StringTuplu {
  string first = 1;
  string second = 2;
}

message StringIntTuplu{
  string first = 1;
  int32 second = 2;
}

message IntTuplu{
  int32 first = 1;
  int32 second = 2;
}

message MixList{
  StringTuplu data = 1;
  IntTuplu list = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string password = 3;
}

message Flight{
  int32 id = 1;
  string destination = 2;
  string date = 3;
  string airport = 4;
  int32 seats = 5;
}

message Request {
  enum RequestType {
    LOGIN = 0;
    LOGOUT = 1;
    FIND_ALL_AVAILABLE_FLIGHTS = 2;
    FIND_ALL_FLIGHT_DESTINATIONS = 3;
    FIND_ALL_FLIGHTS_BY_DESTINATION_AND_DATE = 4;
    FIND_ALL_FLIGHTS = 5;
    FIND_AVAILABLE_SEATS = 6;
    SAVE_TOURIST = 7;
    SAVE_TRIP = 8;
    SAVE_PURCHASE = 9;
    UPDATE_FLIGHT_SEATS = 10;
  }
  RequestType type = 1;
  int32 id = 2;
  User user = 3;
  repeated Flight flights = 4;
  repeated string strings = 5;
  StringTuplu stringTuplu = 6;
  StringIntTuplu stringIntTuplu = 7;
  MixList mixList = 8;
  IntTuplu intTuplu = 9;
  string string = 10;

}

message Response {
  enum ReponseType{
    OK=0;
    ERROR=1;
    GET_AVAILABLE_FLIGHTS=2;
    GET_ALL_FLIGHT_DESTINATIONS=3;
    GET_FLIGHTS_BY_DESTINATION_AND_DATE=4;
    GET_ALL_FLIGHTS=5;
    GET_AVAILABLE_SEATS=6;
    SAVE_TOURIST=7;
    SAVE_TRIP=8;
    UPDATE=9;
  }
  ReponseType type = 1;
  int32 id = 2;
  User user = 3;
  repeated Flight flights = 4;
  repeated string strings = 5;
  StringTuplu stringTuplu = 6;
  StringIntTuplu stringIntTuplu = 7;
  MixList mixList = 8;
  IntTuplu intTuplu = 9;
  string string=10;

}

